Project

General

Profile

Actions

Bug #44801

closed

client: write stuck at waiting for larger max_size

Added by Zheng Yan about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
octopus,nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 4 (0 open4 closed)

Copied to CephFS - Backport #45212: nautilus: client: write stuck at waiting for larger max_sizeResolvedNathan CutlerActions
Copied to CephFS - Backport #45213: luminous: client: write stuck at waiting for larger max_sizeRejectedZheng YanActions
Copied to CephFS - Backport #45214: octopus: client: write stuck at waiting for larger max_sizeResolvedNathan CutlerActions
Copied to CephFS - Backport #45285: mimic: client: write stuck at waiting for larger max_sizeRejectedNathan CutlerActions
Actions #1

Updated by Zheng Yan about 4 years ago

  • Subject changed from fs: write() stuck at waiting for larger max_size to client: write() stuck at waiting for larger max_size
Actions #2

Updated by Zheng Yan about 4 years ago

  • Subject changed from client: write() stuck at waiting for larger max_size to client: write stuck at waiting for larger max_size
Actions #3

Updated by Zheng Yan about 4 years ago

  • Backport set to octopus,nautilus,luminous
  • Pull request ID set to 34274
Actions #4

Updated by Zheng Yan about 4 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Greg Farnum almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45212: nautilus: client: write stuck at waiting for larger max_size added
Actions #7

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45213: luminous: client: write stuck at waiting for larger max_size added
Actions #8

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45214: octopus: client: write stuck at waiting for larger max_size added
Actions #9

Updated by Nathan Cutler almost 4 years ago

  • Backport changed from octopus,nautilus,luminous to octopus,nautilus,mimic,luminous
Actions #10

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #45285: mimic: client: write stuck at waiting for larger max_size added
Actions #11

Updated by Patrick Donnelly almost 4 years ago

  • Assignee set to Zheng Yan
  • Target version set to v16.0.0
  • Source set to Development
  • Component(FS) Client added
Actions #12

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF